Java primer: 245 → 296, add Tier 3 expert sections
Add 7 new sections covering the gaps for a true zero-to-expert
reference at the senior+ / staff / HFT-tooling level:

- Section 29: JVM Performance Engineering (10) — JMH gotchas, JIT
  inlining heuristics, escape analysis vs scalar replacement, JIT
  intrinsics, G1 tuning for low-latency, PrintCompilation logs,
  sampling vs instrumenting profilers, allocation hotspots,
  deoptimization, String deduplication

- Section 30: Lock-Free & Low-Latency Concurrency (8) — Treiber
  stack, Michael-Scott queue, LMAX Disruptor, JMM release-acquire
  semantics, memory barriers (LoadLoad/StoreStore/StoreLoad),
  ABA + AtomicStampedReference, false sharing + @Contended,
  VarHandle / MethodHandle

- Section 31: JVM Tooling & Diagnostics (8) — JFR, JFR streaming,
  jcmd, heap dump analysis (MAT), jlink, jdeps, jpackage,
  async-profiler

- Section 32: Java Module System (JPMS) (5) — module-info.java
  directives, --add-opens / --add-exports, ServiceLoader providers,
  migration strategies, jlink workflow

- Section 33: Modern Java Roadmap (5) — Loom internals, Valhalla
  value types, Leyden AOT, Vector API, Panama FFM

- Section 34: Spot-the-Bug Scenarios (10) — concurrent counter,
  DCL without volatile, ConcurrentModificationException, Integer
  cache, mutable HashMap key, try-with-resources chaining,
  exception swallowing, Optional.of(null), BigDecimal scale,
  synchronized on Boolean

- Section 35: Spring Ecosystem Extras (5) — Spring Modulith,
  Spring Batch, Integration vs Cloud Stream, Sleuth → OTel,
  AspectJ vs Spring AOP